implement ssh tunneling and enhance connectivity

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,7 @@
                     <span>Quiz Buzzer</span>
                 </div>
                 <nav class="app-nav">
+                    <button id="changeServerBtn" class="btn btn-sm btn-ghost" style="margin-right: 10px; font-size: 12px;">Change Server</button>
                     <a href="/landing.html" class="app-nav-link">← Back to Home</a>
                 </nav>
             </div>
