--- a/frontend/public/components-showcase.html
+++ b/frontend/public/components-showcase.html
@@ -130,7 +130,7 @@
     <div class="showcase-container">
         <!-- Header -->
         <div class="showcase-header">
-            <h1>⚡ EPAM Quiz Buzzer - Design System Showcase</h1>
+            <h1>EPAM Quiz Buzzer - Design System Showcase</h1>
             <p style="color: var(--gray-600);">Premium Corporate UI Components & Styles</p>
         </div>
 
