Add Top 3 Participants section and update display logic

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -137,9 +137,19 @@
                                 </div>
                             </div>
 
+                            <!-- Top 3 Participants Section -->
+                            <div class="form-section">
+                                <h3 class="form-section-title">🏆 Top 3 Participants</h3>
+                                <div id="hostTopThreeList" class="top-three-list">
+                                    <div class="empty-state">
+                                        <div class="empty-state-text">Waiting for participants to join...</div>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!-- Participants Section -->
                             <div class="form-section">
-                                <h3 class="form-section-title">👥 Participants</h3>
+                                <h3 class="form-section-title">👥 All Participants</h3>
                                 <div id="hostParticipantsList" class="participants-list">
                                     <div class="empty-state">
                                         <div class="empty-state-icon">👤</div>
