Add Top 3 Participants display for participant view

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -216,6 +216,16 @@
                                     BUZZ!
                                 </button>
 
+                                <!-- Top 3 Participants for Participant View -->
+                                <div id="participantTopThreeList" class="top-three-list" style="margin-top: 30px;">
+                                    <h3 class="form-section-title">🏆 Top Buzzers</h3>
+                                    <div id="participantTopThreeContainer" class="top-three-container">
+                                        <div class="empty-state">
+                                            <div class="empty-state-text">Waiting for buzzes...</div>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <div id="participantWinnerDisplay" class="winner-display" style="display: none;">
                                     <div class="winner-content">
                                         <div class="winner-emoji" id="winnerEmoji">🎉</div>
