Refactor UI text and button states for clarity and consistency

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -139,7 +139,7 @@
 
                             <!-- Top 3 Participants Section -->
                             <div class="form-section">
-                                <h3 class="form-section-title">🏆 Top 3 Participants</h3>
+                                <h3 class="form-section-title">Top 3 Participants</h3>
                                 <div id="hostTopThreeList" class="top-three-list">
                                     <div class="empty-state">
                                         <div class="empty-state-text">Waiting for participants to join...</div>
@@ -149,10 +149,10 @@
 
                             <!-- Participants Section -->
                             <div class="form-section">
-                                <h3 class="form-section-title">👥 All Participants</h3>
+                                <h3 class="form-section-title">All Participants</h3>
                                 <div id="hostParticipantsList" class="participants-list">
                                     <div class="empty-state">
-                                        <div class="empty-state-icon">👤</div>
+                                        <div class="empty-state-icon">▶</div>
                                         <div class="empty-state-text">No participants yet. Share the room ID!</div>
                                     </div>
                                 </div>
@@ -218,7 +218,7 @@
 
                                 <!-- Top 3 Participants for Participant View -->
                                 <div id="participantTopThreeList" class="top-three-list" style="margin-top: 30px;">
-                                    <h3 class="form-section-title">🏆 Top Buzzers</h3>
+                                    <h3 class="form-section-title">Top Buzzers</h3>
                                     <div id="participantTopThreeContainer" class="top-three-container">
                                         <div class="empty-state">
                                             <div class="empty-state-text">Waiting for buzzes...</div>
@@ -228,7 +228,7 @@
 
                                 <div id="participantWinnerDisplay" class="winner-display" style="display: none;">
                                     <div class="winner-content">
-                                        <div class="winner-emoji" id="winnerEmoji">🎉</div>
+                                        <div class="winner-emoji" id="winnerEmoji">★</div>
                                         <div class="winner-text" id="winnerText">Waiting for host...</div>
                                     </div>
                                 </div>
