--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -216,6 +216,10 @@
                                     BUZZ!
                                 </button>
 
+                                <div id="participantSpaceHint" class="spacebar-hint" style="display: none;">
+                                    Buzzer can now be pressed with the space bar.
+                                </div>
+
                                 <!-- Top 3 Participants for Participant View -->
                                 <div id="participantTopThreeList" class="top-three-list" style="margin-top: 30px;">
                                     <h3 class="form-section-title">Top Buzzers</h3>
